src/layout/_layout.scss
/* ... */
.mdl-navigation__link {
  color: $layout-text-color;
  text-decoration: none;
  margin: 0;
  @include typo-body-1(true);

  // Align icons inside link with text
  & .material-icons {
    vertical-align: middle;
  }
}

// Main layout class.
.mdl-layout {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow-y: auto;
  overflow-x: hidden;
  position: relative;
  -webkit-overflow-scrolling: touch;
}

// Utility classes for screen sizes.
.mdl-layout.is-small-screen .mdl-layout--large-screen-only {
  display: none;
}

.mdl-layout:not(.is-small-screen) .mdl-layout--small-screen-only {
  display: none;
}

.mdl-layout__container {
  position: absolute;
  width: 100%;
  height: 100%;
}


  // Optional utility classes for formatting special blocks in this component.
  .mdl-layout__title,
  .mdl-layout-title {
    display: block;
    position: relative;

    @include typo-title();
    font-weight: 400;
    box-sizing: border-box;
  }

  .mdl-layout-spacer {
    flex-grow: 1;
  }


  // Drawer.
  .mdl-layout__drawer {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;

    width: $layout-drawer-width;
    height: 100%;
    max-height: 100%;

    position: absolute;
    top: 0;
    left: 0;

    @include shadow-2dp();

    box-sizing: border-box;
    border-right: 1px solid $layout-drawer-border-color;
    background: $layout-drawer-bg-color;

    // Transform offscreen.
    transform: translateX(-$layout-drawer-width - 10px);
    transform-style: preserve-3d;
    will-change: transform;

    @include material-animation-default();
    transition-property: transform;

    color: $layout-text-color;

    overflow: visible;
    overflow-y: auto;

    z-index: 5;

    &.is-visible {
      transform: translateX(0);
      & ~ .mdl-layout__content.mdl-layout__content {
        overflow: hidden;
      }
    }

    & > * {
      flex-shrink: 0;
    }

    & > .mdl-layout__title,
    & > .mdl-layout-title {
      line-height: $layout-desktop-header-height;
      padding-left: $layout-header-desktop-indent;

      @media screen and (max-width: $layout-screen-size-threshold) {
        line-height: $layout-mobile-header-height;
        padding-left: $layout-header-mobile-indent;
      }
    }

    & .mdl-navigation {
      flex-direction: column;
      align-items: stretch;
      padding-top: 16px;

      & .mdl-navigation__link {
      display: block;
      flex-shrink: 0;
      padding: 16px $layout-header-desktop-indent;
      margin: 0;
      color: $layout-drawer-navigation-color;

        @media screen and (max-width: $layout-screen-size-threshold) {
          padding: 16px $layout-header-mobile-indent;
        }

        &:hover {
          background-color: $layout-nav-color;
        }

        &--current {
            background-color: $layout-drawer-navigation-link-active-background;
            color: $layout-drawer-navigation-link-active-color;
        }
      }
    }

    @media screen and (min-width: $layout-screen-size-threshold + 1px) {
      .mdl-layout--fixed-drawer > & {
        transform: translateX(0);
      }
    }
  }


  // Drawer button.
  // TODO(sgomes): Replace with an icon button when we have that component.
  .mdl-layout__drawer-button {
    display: block;

    position: absolute;
    height: $layout-drawer-button-desktop-size;
    width: $layout-drawer-button-desktop-size;
    border: 0;

    flex-shrink: 0;

    overflow: hidden;
    text-align: center;
    cursor: pointer;
    font-size: 26px;
    line-height: $layout-mobile-header-height;
    font-family: Helvetica, Arial, sans-serif;
    margin: 10px 12px;
    top: 0;
    left: 0;
    color: $layout-header-text-color;

    z-index: 4;

    .mdl-layout__header & {
      position: absolute;
      color: $layout-header-text-color;
      background-color: inherit;

      @media screen and (max-width: $layout-screen-size-threshold) {
        margin: 4px;
      }
    }

    @media screen and (max-width: $layout-screen-size-threshold) {
      margin: 4px;
      color: rgba(0, 0, 0, 0.5);
    }

    @media screen and (min-width: $layout-screen-size-threshold + 1px) {
      line-height: $layout-header-desktop-row-height;

      .mdl-layout--no-desktop-drawer-button &,
      .mdl-layout--fixed-drawer > &,
      .mdl-layout--no-drawer-button & {
        display: none;
      }
    }
  }
/* ... */

